# meta-agent

./: .dockerignore  .env.example  .gitignore  .gitmessage  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  swebench-harness-gate.yml
clients/vscode/: README.md  package-lock.json  package.json  tsconfig.json
clients/vscode/src/: client.ts  config.ts  diff.ts  diff_webview.ts  extension.ts  trajectory_webview.ts  ui.ts
docs/dogfood/: bug-fix-real-llm.md  bug-fix-v2-real-llm.md  eval-baseline.md
docs/specs/: AGENT_SPEC.md  ANDREJ_KARPATHY_PRINCIPLES.md  CONTEXT_PROPAGATION.md  EVAL_BASELINE.md  INFRA_SELECTION_MATRIX.md  STATUS_ANNOTATION.md
eval/: __init__.py
eval/results/baseline-v1/: README.md  psf__requests-2317.agent.patch  psf__requests-2317.json
eval/swebench/: __init__.py  __main__.py  agent.py  batch.py  containers.py  dataset.py  evaluate.py  identity.py  images.py  instances.py  llm_factory.py  log_parsers.py  patches.py  pipeline.py  results.py  test_specs.py  workspace.py
eval/swebench/fixtures/: instances_sample.json
examples/: smoke_case_runner.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_task_graph_id.py  0002_tasks_result_json.py  0004_llm_usage_logs.py  0005_api_keys.py  0006_prompts_and_llm_usage_prompt_columns.py  0007_llm_usage_step_kind.py  0008_task_permission_mode_budget_policy.py  0009_webhook_subscriptions_deliveries.py  0010_task_budget_threshold.py  0011_llm_usage_prompt_excerpt.py
src/meta_agent/: __init__.py
src/meta_agent/adapters/: __init__.py
src/meta_agent/api/: __init__.py  app.py  cursor.py  deps.py  schemas.py
src/meta_agent/cli/: __init__.py  __main__.py  client.py  commands.py
src/meta_agent/core/: __init__.py
src/meta_agent/evals/: __init__.py  smoke_catalog.py  smoke_runner.py
src/meta_agent/infra/: __init__.py
src/meta_agent/worker/: __init__.py  __main__.py  bootstrap.py  expiry_sweeper.py  runner.py
tests/api/: __init__.py  test_auth.py  test_events_sse.py  test_llm_stream_sse.py  test_permission_decide.py  test_permission_stream_sse.py  test_queries.py  test_sessions.py  test_tasks.py  test_trajectory.py
tests/cli/: test_client.py  test_main.py  test_prompt_handler.py
tests/core/capabilities/: test_executor.py  test_registry.py
tests/core/domain/: test_audit.py  test_billing.py  test_checkpoint.py  test_errors.py  test_llm_usage.py  test_outbox.py  test_prompt_asset.py  test_session.py  test_task.py  test_tenant.py  test_workspace.py
tests/core/orchestration/: _fakes.py  test_auto_pr.py  test_budget_gate.py  test_bug_fix.py  test_bug_fix_v2.py  test_chain.py  test_code_review.py  test_composition.py  test_echo_graph.py  test_feature_impl.py  test_git_inspect_graph.py  test_graph.py  test_human_gate.py  test_llm_streaming.py  test_registry.py  test_result.py  test_session_history.py  test_shell_agent.py  test_shell_agent_code_index.py  test_shell_agent_web_tools.py  test_simple_chat.py  test_state.py
tests/eval/swebench/: test_agent.py  test_batch.py  test_cli.py  test_containers.py  test_dataset.py  test_evaluate.py  test_evaluate_real_docker.py  test_identity.py  test_images.py  test_llm_factory.py  test_log_parsers.py  test_patches.py  test_pipeline.py  test_results.py  test_test_specs.py  test_workspace.py
tests/evals/: test_smoke_catalog.py
tests/infra/auth/: test_config.py  test_env_validator.py  test_pg_validator.py
tests/infra/budget/: test_config.py  test_llm_usage_aggregator.py  test_noop.py
tests/infra/circuitbreaker/: test_config.py  test_in_memory.py  test_noop.py  test_redis_breaker.py
tests/infra/git_provider/: test_circuit_breaking.py  test_fake.py  test_github.py  test_rate_limited.py
tests/infra/llm/: test_broadcasting.py  test_budget_enforcing.py  test_circuit_breaking.py  test_metered.py  test_openrouter.py  test_rate_limited.py  test_redacting_llm.py  test_routing.py  (+1 more)
tests/integration/: conftest.py  test_bug_fix_docker_smoke.py  test_bug_fix_eval_baseline.py  test_bug_fix_real_llm.py  test_bug_fix_v2_docker_smoke.py  test_bug_fix_v2_eval_baseline.py  test_bug_fix_v2_real_llm.py  test_end_to_end_echo.py  test_feature_impl_smoke.py  test_llm_router_step_kind_e2e.py  test_outbox_flow.py  test_prompt_provenance_e2e.py  test_prompt_registry_postgres.py  test_query_api.py  test_redis_chunk_broadcaster.py  test_redis_circuit_breaker.py  test_redis_permission_gate.py  test_redis_rate_limiter.py  test_repositories.py  test_trajectory_postgres.py
tests/live/: test_openrouter_live.py
tests/worker/: _fakes.py  test_bootstrap.py  test_expiry_sweeper.py  test_runner.py  test_runner_gamma.py
(+203 files in other folders)
