[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "meta-agent"
version = "0.0.1"
description = "Enterprise-grade Code Agent platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "meta-agent contributors" }]
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "pydantic>=2.7",
    "redis>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff specific
]
ignore = [
    "E501",   # line length, handled by formatter
    "RUF001", # allow Chinese full-width punctuation in strings
    "RUF002", # allow Chinese full-width punctuation in docstrings
    "RUF003", # allow Chinese full-width punctuation in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["testcontainers", "testcontainers.*", "docker", "docker.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
    "integration: requires external services (postgres, redis); skipped in unit-only CI",
]
